# py-cv

./: bitwise.py  captcha.py  cv-cornerHarris.py  cv-goodFeaturesToTrack.py  download-Code.py  pydate_numpy.py  verification-code.py  watershed.py
captchas/: captcha_log.txt  py-captchas.py
machine_learning/: k_means.py  knn.py  linear_regression.py  py_knn.py
pdf2img/: pyproject.toml
pdf2img/src/pdf2img/: __init__.py
py-pillow/: captcha_deal.txt  captcha_log.txt  pillow-1.py  pillow-pytessert.py
scrapy/demo/demo/: items.py  settings.py
scrapy/demo/demo/spiders/: douban_spider.py
thread/: 360_beauty.py  360_beauty_aiohttp.py  360_beauty_thread.py  360_beauty_threadlook.py  Pipfile  aiohttptest.py  py_k.py  thread1.py  thread2.py  thread3.py  thread_lock.py
train/: register.jfif
