[project]
name = "pdf2img"
version = "0.1.0"
description = ""
authors = [
    {name = "lbn",email = "lv199618@163.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf (>=1.25.5,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pdf2img", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
